--- a/launchmon/src/linux/Makefile.am
+++ b/launchmon/src/linux/Makefile.am
@@ -98,8 +98,7 @@ launchmon_SOURCES       = main.cxx \
 			  sdbg_linux_ptracer.hxx \
 			  sdbg_linux_symtab.hxx \
 		          sdbg_linux_ttracer_impl.hxx \
-			  sdbg_linux_thr_db.hxx \
-                          daemon_launcher.c
+			  sdbg_linux_thr_db.hxx 
 else
 launchmon_SOURCES       = main.cxx \
                           sdbg_linux_launchmon.cxx  \
